quickly squashed some bugs I found in CSS

--- a/assets/style.css
+++ b/assets/style.css
@@ -27,6 +27,9 @@ nav > .social-nav {
 .social-nav{
     text-decoration: none;
 }
+.topnav{
+    height: 10vh;
+}
 
 
 #nav-social-section,
@@ -80,11 +83,11 @@ nav > .social-nav {
     background-color: transparent;
     color: rgb(85,26,139);
     font-weight: 300;
+    font-size: 30px;
     text-shadow: 2px 2px 8px #74747494;
     transform: translatey(2vh);
-
-
 }
+
 
 .title-card ul{ 
     background-color: transparent;
@@ -124,7 +127,7 @@ nav > .social-nav {
 .toon-head {
     display: flex;
     justify-content: flex-end;
-    transform: translate(-10%, -10%);
+    /* transform: translate(-10%, -10%); */
     position: static;
     align-content: center;
     flex-wrap: wrap;
@@ -225,7 +228,6 @@ nav > .social-nav {
     align-items: flex-start;
     justify-content: center;
     padding-bottom: 40px;
-
 }
 
 
@@ -246,8 +248,6 @@ nav > .social-nav {
 
 .about-me-arrow-text {
     text-decoration: none;
-    
-
 }
 
 .education-page {
@@ -293,17 +293,11 @@ nav > .social-nav {
     border-radius: 10px;
     align-items: center;
     justify-content: center;
-    
-
-
 }
-
-
 
 .p-box-container {
     font-weight: 200;
-    font-size: 10px;
-    color: white;
+    font-size: 20px;
     display: flex;
     text-decoration: none;
     flex-direction: row;
